<resources>
    <string name="app_name">ParcoursMobile_1</string>
    <string name="test_string_1">I AM POOR</string>
    <string name="thanks">Thanks for your help</string>
    <string name="name_edit">Enter your name</string>
    <string name="amount_edit">Enter your card amount</string>
    <string name="cardNumber_edit">Enter your card number</string>
    <string name="submit">Submit</string>

</resources>
