<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Poor_1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/thanks"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/name_edit"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/amount_edit"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_cardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/cardNumber_edit"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />


    <Button
        android:id="@+id/submit"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"

        app:cornerRadius="4dp"
        app:icon="@drawable/ic_check_mark"
        app:iconGravity="start" />

</LinearLayout>